<resources>
    <string name="app_name">MeasureMate</string>
    <string name="measuremate">mEASUREmATE</string>
    <string name="unit_converter">UNIT CONVERTER</string>
    <string name="speed">SPEED</string>
    <string name="weight">WEIGHT</string>
    <string name="volume">VOLUME</string>
    <string name="area">AREA</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="_00">00</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="delete_sign">⌫</string>
    <string name="length_converter">Length Converter</string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="area_converter">Area Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="weight_converter">Weight Converter</string>
    <string name="speed_converter">Speed Converter</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="unit_convert_to_select">Unit Convert to (select)</string>
    <string name="_123456">123456</string>
</resources>