<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeyFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/seven_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/four_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/one_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/double_zero_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_00"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/eight_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/five_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/two_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/zero_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/nine_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/six_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/three_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/dot_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac_key"
                tools:ignore="VisualLintButtonSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/key_background"
                android:gravity="center"
                android:text="@string/ac"
                android:textColor="#A01818"
                android:textSize="30sp" />

            <Button
                android:id="@+id/clear_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/units_background"
                android:gravity="center"
                android:text="@string/delete_sign"
                android:textColor="#A01818"
                android:textSize="40sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>